SkyXplore - AIO - Fix Selenium tests